--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,8 +49,11 @@ dependencies {
     compile 'com.google.firebase:firebase-crash:10.2.0'
     compile 'com.firebase:firebase-client-android:2.5.2'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.jjoe64:graphview:4.2.1'
     testCompile 'junit:junit:4.12'
 }
+
+
 
 
 
