--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,11 +4,11 @@
 
     <application
         android:allowBackup="true"
+        android:hardwareAccelerated="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:hardwareAccelerated="false"
         android:theme="@style/Theme.Design.NoActionBar">
         <activity android:name=".LogoActivity">
             <intent-filter>
@@ -19,9 +19,18 @@
         </activity>
         <activity android:name=".CreateAccountActivity" />
         <activity android:name=".MyAccountActivity" />
-        <activity android:name=".AnalysisActivity" />
+        <activity
+            android:name=".AnalysisActivity"
+            android:hardwareAccelerated="true">
+        </activity>
         <activity android:name=".SettingsActivity" />
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.ankit.awareness.MainActivity" />
+        </activity>
+        <activity android:name=".ResetActivity" />
+        <activity android:name=".AddDeviceActivity"></activity>
     </application>
 
 </manifest>
