--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,7 +17,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-
+    repositories {
+        maven { url "https://jitpack.io" }
+    }
     packagingOptions {
         exclude 'META-INF/NOTICE' // will not include NOTICE file
         exclude 'META-INF/LICENSE' // will not include LICENSE file
@@ -42,6 +44,7 @@ dependencies {
     //compile 'com.google.firebase:firebase-auth:11.8.0'
     //compile 'com.google.firebase:firebase-crash:11.8.0'
     //compile 'com.firebase:firebase-client-android:2.5.2'
+    compile 'com.github.PhilJay:MPAndroidChart:v3.0.3'
     compile 'com.android.support:appcompat-v7:25.2.0'
     compile 'com.android.support:design:25.2.0'
     compile 'com.google.firebase:firebase-database:10.2.0'
