--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,10 +7,10 @@
         android:hardwareAccelerated="false"
         android:largeHeap="true"
         android:icon="@mipmap/ic_awareness"
-        android:label="@string/app_name"
+        android:label=""
         android:roundIcon="@mipmap/ic_awareness"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat">
+        android:theme="@style/AppTheme">
         <activity android:name=".LogoActivity" android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
