UI/Ux changes 15/3/2018

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".CreateAccountActivity" android:theme="@style/AppTheme.NoActionBar"/>
-        <activity android:name=".MyAccountActivity" android:label=""/>
+        <activity android:name=".MyAccountActivity" android:theme="@style/account" android:label=""/>
         <activity
             android:name=".AnalysisActivity"
             android:hardwareAccelerated="true" android:label="">
