--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,8 +30,11 @@
         <activity
             android:name=".AnalysisActivity"
             android:hardwareAccelerated="true"
-            android:label=""></activity>
-        <activity android:name=".SettingsActivity" />
+            android:label="">
+        </activity>
+        <activity android:name=".SettingsActivity"
+            android:label=""
+            android:theme="@style/account"/>
         <activity
             android:name=".MainActivity"
             android:theme="@style/AppTheme.NoActionBar">
@@ -45,7 +48,12 @@
         <activity
             android:name=".AddDeviceActivity"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".ConnectedDeviceActivity"></activity>
+        <activity android:name=".ConnectedDeviceActivity"
+            android:label=""
+            android:theme="@style/account"
+            />
+
+
     </application>
 
 </manifest>
