finished animation and added calling activities for flow

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,12 @@
         <activity
             android:name=".MyAccountActivity"
             android:label=""
-            android:theme="@style/account" />
+            android:theme="@style/account" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.ankit.awareness.ConnectedDeviceActivity" />
+
+        </activity>
         <activity
             android:name=".AnalysisActivity"
             android:hardwareAccelerated="true"
