UI/Ux changes 20/3/2018 changing icon email pass for many activities

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,12 +51,16 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".AddDeviceActivity"
+            android:label=""
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".ConnectedDeviceActivity"
             android:label=""
             android:theme="@style/account" />
-        <activity android:name=".LiveActivity"></activity>
+        <activity android:name=".LiveActivity"
+            android:label=""
+            android:theme="@style/account"
+            ></activity>
     </application>
 
 </manifest>
