--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".MyAccountActivity"
-            android:label="?"
+            android:label=""
             android:theme="@style/account">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
